[gd_scene load_steps=3 format=3 uid="uid://fxhwlig2asgy"]

[ext_resource type="Script" uid="uid://0jyldgbf7aoy" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://g4a0mmp7uiuc" path="res://scripts/steam.gd" id="2_sugp2"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0wfyh")

[node name="Steam" type="Node" parent="."]
script = ExtResource("2_sugp2")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[node name="StartMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Host" type="Button" parent="StartMenu"]
layout_mode = 0
offset_left = 15.0
offset_top = 279.0
offset_right = 276.0
offset_bottom = 430.0
text = "Host"

[node name="Refresh" type="Button" parent="StartMenu"]
layout_mode = 0
offset_left = 16.0
offset_top = 458.0
offset_right = 270.0
offset_bottom = 590.0
text = "Refresh"

[node name="LobbyContainer" type="ScrollContainer" parent="StartMenu"]
layout_mode = 0
offset_left = 319.0
offset_top = 308.0
offset_right = 1056.0
offset_bottom = 636.0

[node name="Lobbies" type="VBoxContainer" parent="StartMenu/LobbyContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 17.0
offset_top = 10.0
offset_right = 157.0
offset_bottom = 82.0
text = "Exit lobby"

[connection signal="pressed" from="StartMenu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="StartMenu/Refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
